refactor: build.gradle.kts